add concluding statement

--- a/index.html
+++ b/index.html
@@ -14062,7 +14062,7 @@ $( document ).ready(code_toggle);
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<blockquote><p>In the following visualization, I compare the isolation to the non white Gini coefficient of each city. Some cities have quite a diffference - but overall they have similar results.</p>
+<blockquote><p>In the following visualization, I compare the isolation to the non white Gini coefficient of each city. Some cities have quite a diffference - but overall they have similar results. We can see that in comparison to the Gini coefficient vs. standard deviation, the plot for isolation vs. the Gini coefficient are more alike.</p>
 </blockquote>
 
 </div>
@@ -14102,6 +14102,14 @@ $( document ).ready(code_toggle);
 </div>
 </div>
 
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>Overall both the Gini coefficient and the measures for isolation and interaction are valid and lead to an accurate and informative insight into segregation among census tracts for each of the cities. The Gini coefficient gives us a look into the distribution of racial groups among each census tract, whereas isolation, and it's counterpart interaction, tell us how isolated each city's racial groups are, and for the latter how much interaction there is. In my opinion the insights from both methods a valuable as the provide practical insight into the segregation found in cities.</p>
+
+</div>
+</div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
